log
Wed 08 May 2024 02:57:08 PM UTC: 
 tests:  1|8
total_score: 0/70
ce07a09
Wed 08 May 2024 02:59:45 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2100ff5
Wed 08 May 2024 03:04:35 PM UTC: 
 tests:  4|7
total_score: 5/70
e535273
Wed 08 May 2024 03:07:34 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
25cd2aa
Wed 08 May 2024 03:08:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  7|6
total_score: 5/70
e668964
Wed 08 May 2024 03:09:47 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
03a9979
Wed 08 May 2024 03:11:06 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|6
total_score: 5/70
b2ee11a
Wed 08 May 2024 03:17:03 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5c8afc7
Wed 08 May 2024 03:19:19 PM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d6fc0cd
Wed 08 May 2024 03:19:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: ‘parent’ undeclared (first use in this function)
   59 |             parent = aux;
      |             ^~~~~~
treemap.c:59:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4cf3c7f
Wed 08 May 2024 03:19:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
7cc7bbc
Wed 08 May 2024 03:20:22 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|6
total_score: 5/70
ac2aac5
Wed 08 May 2024 03:20:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
9724b75
Wed 08 May 2024 03:26:37 PM UTC: 
 treemap.c | 25 +++++++------------------
 1 file changed, 7 insertions(+), 18 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:9: error: expected expression before ‘)’ token
   52 |     if ()
      |         ^
Compilation failed
07a853e
Wed 08 May 2024 03:27:05 PM UTC: 
 treemap.c | 16 ++--------------
 1 file changed, 2 insertions(+), 14 deletions(-)
 tests:  9|5
total_score: 10/70
b5c2db1
Wed 08 May 2024 03:30:20 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  14|4
total_score: 25/70
64bd36c
Wed 08 May 2024 03:32:25 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
3c8e126
Wed 08 May 2024 03:35:22 PM UTC: 
 treemap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  14|4
total_score: 25/70
f9c0db9
Wed 08 May 2024 03:35:53 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  14|4
total_score: 25/70
6cc1531
